--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -35,16 +35,23 @@ theme:
 nav:
   - Home: index.md
   - Projects: projects.md
+  - Research Plots: generated/gallery
   - CV: cv.md
   - Personal: personal.md
 
+
 markdown_extensions:
   - attr_list
+  - md_in_html
+  - pymdownx.blocks.caption
 
 plugins:
-  - search
   - tags
   - mkdocs-pdf
+  - gallery:
+      examples_dirs: docs/examples          # path to your example scripts
+      gallery_dirs: docs/generated/gallery  # where to save generated gallery
+  - search
 
 extra:
   social:
@@ -54,5 +61,5 @@ extra:
     - icon: fontawesome/brands/linkedin
       link: https://www.linkedin.com/in/fredhli/
       name: LinkedIn
-extra_css:
-  - assets/extra.css
+# extra_css:
+#   - assets/extra.css
