--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -53,6 +53,8 @@ plugins:
       examples_dirs: docs/examples          # path to your example scripts
       gallery_dirs: docs/generated/gallery  # where to save generated gallery
   - search
+  - git-revision-date-localized:
+      enable_creation_date: true
 
 extra:
   social:
