--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,12 +2,10 @@ site_name: "Fred H. Li"
 site_url: "https://fredhli.github.io"
 repo_url: https://github.com/fredhli/fredhli.github.io
 repo_name: Repository for this Website
-# site_url: 127.0.0.1:8000
 theme:
   name: "material"
   font: 
     text: Roboto
-    code: Roboto Mono
   palette: 
     # Palette toggle for light mode
     - scheme: default
@@ -46,13 +44,16 @@ markdown_extensions:
   - attr_list
   - md_in_html
   - pymdownx.blocks.caption
+  - pymdownx.highlight
+  - pymdownx.superfences  # 这个扩展可以更好地支持代码块显示
 
 plugins:
-  - tags
-  - mkdocs-pdf
+  - include-markdown
   - search
+  - tags
   - git-revision-date-localized:
       enable_creation_date: true
+  - mkdocs-pdf
 
 extra:
   social:
