--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: "Fred H. Li"
+site_name: Fred H. Li
 site_url: "https://fredhli.github.io"
 repo_url: https://github.com/fredhli/fredhli.github.io
 repo_name: Repository for this Website
