--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,6 +25,7 @@ theme:
 nav:
   - Home: index.md
   - Projects: projects.md
+  - Research Experience: research_experience.md
   - Sample Codes: sample_codes.md
   - CV: cv.md
   - Personal: personal.md
