--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,6 +18,7 @@ theme:
     - toc.integrate
     - navigation.footer
     - navigation.tabs
+    - navigation.tabs.sticky
     - navigation.instant
     - navigation.instant.prefetch
     - navigation.instant.process
@@ -30,7 +31,6 @@ nav:
   - CV: cv.md
   - Personal: personal.md
 
-
 markdown_extensions:
   - attr_list
   - md_in_html
@@ -39,7 +39,10 @@ markdown_extensions:
   - pymdownx.superfences
   - pymdownx.arithmatex:
       generic: true
-
+  - toc:
+      permalink: false
+      toc_depth: 3
+      
 plugins:
   - include-markdown
   - search
@@ -47,6 +50,7 @@ plugins:
   - git-revision-date-localized:
       enable_creation_date: true
   - mkdocs-pdf
+  - mkdocs-jupyter
 
 extra:
   social:
@@ -59,9 +63,12 @@ extra:
     - icon: fontawesome/solid/envelope
       link: mailto:<fredhli@outlook.com>
 
-copyright: Copyright &copy; 2024 Fred H. Li
+copyright: Copyright &copy; 2024 Fred Houze Li
 
 extra_javascript:
   - main.js
   - javascripts/mathjax.js
   - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
+
+extra_css:
+  - css/custom.css
