--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -30,7 +30,7 @@ nav:
   - Projects: projects.md
   - Research Experience: research_experience.md
   - Sample Codes: sample_codes.md
-  - CV: cv.md
+  - CV: cv.pdf
   - Personal&nbsp&nbsp: personal.md
   - '<i class="fa-brands fa-linkedin"></i>': https://www.linkedin.com/in/fredhli/
   - '<i class="fa-brands fa-github"></i>': https://www.github.com/fredhli
