--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,7 +28,7 @@ theme:
 nav:
   - Home: index.md
   - Projects: projects.md
-  - Research Experience: research_experience.md
+  # - Research Experience: research_experience.md
   - Sample Codes: sample_codes.md
   - CV: cv.md
   - Personal&nbsp&nbsp: personal.md
